--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,11 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.source>11</maven.compiler.source>
+    <!-- Change to 11 -->
     <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
     <maven.compiler.release>${maven.compiler.source}</maven.compiler.release>
+    <!-- Update to reflect Java 11 -->
     <testng.version>7.9.0</testng.version>
     <slf4j.version>2.1.0-alpha1</slf4j.version>
     <maven-clean-plugin.version>3.3.2</maven-clean-plugin.version>
